--- a/index.html
+++ b/index.html
@@ -27,3 +27,4 @@
     canvas.height = window.innerHeight;
 
     const particles = [];
+    const gravityCenter = { x: canvas.width / 2, y: canvas.height / 2 };
