--- a/index.html
+++ b/index.html
@@ -34,3 +34,4 @@
         this.x = Math.random() * canvas.width;
         this.y = Math.random() * canvas.height;
         this.speedX = 0;
+        this.speedY = 0;
