--- a/index.html
+++ b/index.html
@@ -36,3 +36,4 @@
         this.speedX = 0;
         this.speedY = 0;
         this.size = Math.random() * 5 + 2;
+        this.color = getRandomColor();
