--- a/index.html
+++ b/index.html
@@ -42,3 +42,4 @@
       update() {
         const dx = gravityCenter.x - this.x;
         const dy = gravityCenter.y - this.y;
+        const distance = Math.sqrt(dx ** 2 + dy ** 2);
