--- a/index.html
+++ b/index.html
@@ -44,3 +44,4 @@
         const dy = gravityCenter.y - this.y;
         const distance = Math.sqrt(dx ** 2 + dy ** 2);
 
+        // Attraction towards the center (gravitational force)
