--- a/index.html
+++ b/index.html
@@ -45,3 +45,4 @@
         const distance = Math.sqrt(dx ** 2 + dy ** 2);
 
         // Attraction towards the center (gravitational force)
+        this.speedX += dx * 0.0001;
