--- a/index.html
+++ b/index.html
@@ -46,3 +46,4 @@
 
         // Attraction towards the center (gravitational force)
         this.speedX += dx * 0.0001;
+        this.speedY += dy * 0.0001;
